KAFKA-18273: KIP-1099 verbose display share group options